fixing scrollbar issue

--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -1,3 +1,3 @@
-::-webkit-scrollbar { 
+.cardCont::-webkit-scrollbar { 
     display: none; 
 }
